# xe

./: Cargo.toml  README.md
src/: app.rs  main.rs  models.rs  player.rs  terminal.rs  ui.rs  youtube.rs
