[package]
name = "xe"
version = "0.1.0"
edition = "2024"
license-file = "license"
description = "xe"

repository = "https://github.com/unitme/xe"

[dependencies]
anyhow = "1"
crossterm = "0.29"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
url = "2"
liber = "0.1.0"
